--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         body {
             background-color: whitesmoke;  
             font-family: Arial, sans-serif;
+            
+        }
+        h1{
+          text-align: center;
         }
         </style>
     </head>
@@ -12,16 +16,19 @@
     <h2 style="color: purple;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> Registration Number: 24BCT0220 </h2>
     <p style="color: green; font-family: Georgia, 'Times New Roman', Times, serif;"> Greetings! My name is Shreya Shukla. 
         <br><br>
+        
         I am second year B.Tech student in IOT branch.
         This is my first Web Programming class. My faculty name is Jayakumar S.
         Few of my subjects in fourth sem are:<br>
-        1. Web Programming (Faculty: Jayakumar S)<br>
-        2. Design and Analysis of Algorithms (Faculty: Srivani A)<br>
-        3. Computer Architecture and Organisation (Faculty:  Karthika MS)<br>
-        4. Microprocessor and Microcontrollers(Faculty: Bijaylaxmi Das)<br>
-        5. Probability and Statistics (Faculty: Palanivel R)<br>
-        6. Theory of Computation (Faculty: Vijayarajan V)
+        <ul type="square;">
+        <li>Web Programming (Faculty: Jayakumar S)</li>
+        <li>Design and Analysis of Algorithms (Faculty: Srivani A)</li>
+        <li>Computer Architecture and Organisation (Faculty:  Karthika MS)</li>
+        <li>Microprocessor and Microcontrollers(Faculty: Bijaylaxmi Das)</li>
+        <li> Probability and Statistics (Faculty: Palanivel R)</li>
+        <li>Theory of Computation (Faculty: Vijayarajan V)</li>
         <br>
-        Thankyou!
+        </ul>
+      Thankyou!
     </p>
 </html>
